docs: Runnig the project and swagger docs
